@@ -1,3 +1,7 @@
+2008-09-18  Jonathan Pryor  <jpryor@novell.com>
+
+	* NaturalStringComparer.cs: Fix typo.
+
 2008-09-17  Jonathan Pryor  <jpryor@novell.com>
 
 	* Maybe.cs: 
