@@ -1,3 +1,8 @@
+2008-09-18  Jonathan Pryor  <jpryor@novell.com>
+
+	* doc/en/Mono.Rocks/NaturalStringComparer.xml: Document.
+	* doc/en/Mono.Rocks/Maybe`1.xml: Threading Safety Statement.
+
 2008-09-17  Jonathan Pryor  <jpryor@novell.com>
 
 	* doc/en/Mono.Rocks/Maybe`1.xml: Document Maybe<T>.
